# agent-governance-toolkit

./: .cspell-repo-terms.txt  .gitleaksignore  CHANGELOG.md  README.md
.github/linters/: markdown-link-check.json
.github/workflows/: ci.yml  publish-containers.yml  require-maintainer-approval.yml
agent-governance-python/agent-hypervisor/: pyproject.toml
agent-governance-python/agent-hypervisor/benchmarks/: bench_hypervisor.py
agent-governance-python/agent-hypervisor/examples/: demo.py
agent-governance-python/agent-hypervisor/examples/dashboard/: app.py
agent-governance-python/agent-hypervisor/examples/docker-compose/app/: sample_workflow.py  server.py
agent-governance-python/agent-hypervisor/notebooks/: hypervisor-exploration.ipynb
agent-governance-python/agent-hypervisor/src/hypervisor/: core.py  models.py  providers.py
agent-governance-python/agent-hypervisor/src/hypervisor/api/: models.py  server.py
agent-governance-python/agent-hypervisor/src/hypervisor/audit/: delta.py  gc.py
agent-governance-python/agent-hypervisor/src/hypervisor/cli/: session_commands.py
agent-governance-python/agent-hypervisor/src/hypervisor/integrations/: iatp_adapter.py  verification_adapter.py
agent-governance-python/agent-hypervisor/src/hypervisor/liability/: __init__.py  attribution.py  quarantine.py  vouching.py
agent-governance-python/agent-hypervisor/src/hypervisor/observability/: event_bus.py  prometheus_collector.py  saga_span_exporter.py
agent-governance-python/agent-hypervisor/src/hypervisor/reversibility/: registry.py
agent-governance-python/agent-hypervisor/src/hypervisor/rings/: elevation.py
agent-governance-python/agent-hypervisor/src/hypervisor/saga/: fan_out.py  orchestrator.py  schema.py
agent-governance-python/agent-hypervisor/src/hypervisor/sandbox/: __init__.py
agent-governance-python/agent-hypervisor/src/hypervisor/security/: kill_switch.py  rate_limiter.py
agent-governance-python/agent-hypervisor/src/hypervisor/session/: __init__.py  intent_locks.py  isolation.py  sso.py  vector_clock.py
agent-governance-python/agent-hypervisor/src/hypervisor/verification/: history.py
agent-governance-python/agent-hypervisor/tests/: test_agent_manager.py  test_breach_detector.py  test_classifier.py  test_kill_switch.py  test_rate_limiter.py  test_session_isolation.py  test_shapley_attribution.py  test_spec_hypervisor_conformance.py
agent-governance-python/agent-hypervisor/tests/integration/: test_hypervisor_e2e.py  test_scenarios.py
agent-governance-python/agent-hypervisor/tests/unit/: test_audit.py  test_config_validation.py  test_liability_improvements.py  test_models.py  test_observability.py  test_prometheus_collector.py  test_ring_enforcement.py  test_ring_improvements.py  test_rings.py  test_saga.py  test_saga_improvements.py  test_saga_schema.py  test_saga_span_exporter.py  test_sandbox_path.py  test_session_security.py
agent-governance-python/agent-hypervisor/tutorials/execution-rings-workflow/: demo.py
agent-governance-python/agent-hypervisor/tutorials/saga-compensation/: demo.py
agent-governance-python/agent-mesh/: pyproject.toml
agent-governance-python/agent-mesh/examples/00-registration-hello-world/: simulated_registration.py
agent-governance-python/agent-mesh/examples/01-mcp-tool-server/: main.py
agent-governance-python/agent-mesh/examples/02-customer-service/: main.py
agent-governance-python/agent-mesh/examples/03-healthcare-hipaa/: main.py
agent-governance-python/agent-mesh/examples/06-eu-ai-act-compliance/: compliance_checker.py  demo.py
agent-governance-python/agent-mesh/examples/06-trust-score-dashboard/: trust_dashboard.py
agent-governance-python/agent-mesh/src/agentmesh/: exceptions.py
agent-governance-python/agent-mesh/src/agentmesh/identity/: __init__.py  tee_keystore.py
agent-governance-python/agent-mesh/tests/: test_grpc_transport.py  test_tee_keystore.py
agent-governance-python/agent-os/: CHANGELOG.md  pyproject.toml
agent-governance-python/agent-os/docs/: api-reference.md
agent-governance-python/agent-os/extensions/copilot/: package-lock.json  package.json
agent-governance-python/agent-os/extensions/cursor/: package.json
agent-governance-python/agent-os/extensions/mcp-server/: package-lock.json  package.json
agent-governance-python/agent-os/modules/nexus/: client.py
agent-governance-python/agent-os/src/agent_os/: __init__.py  event_sink.py  mcp_message_signer.py  mcp_protocols.py  memory_guard.py
agent-governance-python/agent-os/src/agent_os/integrations/: crewai_adapter.py  google_adk_adapter.py  health.py  langchain_adapter.py  semantic_kernel_adapter.py
agent-governance-python/agent-os/src/agent_os/server/: app.py
agent-governance-python/agent-os/tests/: test_core_features.py  test_event_sink.py  test_health.py  test_mcp_message_signer.py  test_memory_guard.py  test_optional_deps_integration.py  test_server.py
agent-governance-python/agent-os/tests/nexus/: test_client.py  test_escrow.py  test_registry.py
agent-governance-python/agent-primitives/: pyproject.toml
agent-governance-python/agent-rag-governance/: pyproject.toml
agent-governance-python/agent-sandbox/: README.md
agent-governance-python/agent-sre/: pyproject.toml
agent-governance-python/agentmesh-integrations/cedarling-agentmesh/: README.md  pyproject.toml
agent-governance-python/agentmesh-integrations/cedarling-agentmesh/cedarling_agentmesh/: backend.py
agent-governance-python/agentmesh-integrations/cedarling-agentmesh/tests/: test_cedarling_backend.py
agent-governance-python/agentmesh-integrations/cedarling-agentmesh/tests/policy-stores/simple-unsigned/: metadata.json  schema.cedarschema
agent-governance-python/agentmesh-integrations/cedarling-agentmesh/tests/policy-stores/simple-unsigned/policies/: allow-read.cedar
agent-governance-rust/: Cargo.toml
agent-governance-typescript/: package-lock.json  package.json
docs/: PACKAGE-FEATURE-MATRIX.md
docs/i18n/: README.ko.md
policy-engine/: README.md
policy-engine/integrations/otel/: Cargo.toml
policy-engine/integrations/otel/src/: lib.rs
(+96 files in other folders)
