[workspace]
members = ["agentmesh", "agentmesh-mcp"]
resolver = "2"

[workspace.package]
version = "4.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/microsoft/agent-governance-toolkit"
rust-version = "1.89"

[workspace.dependencies]
agentmesh-mcp = { path = "agentmesh-mcp", version = "4.0.0" }
aes-gcm = "=0.10.3"
assert_cmd = "=2.2.2"
base64 = "=0.22.1"
cedar-policy = "=4.11.2"
clap = { version = "=4.6.1", features = ["derive"] }
predicates = "=3.1.4"
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
hmac = "=0.12.1"
opentelemetry = { version = "=0.32.0", default-features = false, features = ["trace"] }
rand = "=0.8.6"
regex = "=1.12.4"
regorus = { version = "=0.10.1", default-features = false, features = ["regex"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
tempfile = "=3.27.0"
