[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent_hypervisor"
version = "4.0.0"
description = "Deprecated — use agent-governance-toolkit-core instead. Agent Hypervisor: Runtime supervisor for multi-agent Shared Sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
maintainers = [
    {name = "Agent Governance Toolkit Team", email = "agentgovtoolkit@microsoft.com"},
]
keywords = [
    "ai", "agents", "hypervisor", "trust", "multi-agent",
    "shared-sessions", "liability", "execution-rings", "saga",
    "governance", "safety", "audit", "hash-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

# This package is deprecated. All functionality is now in agent-governance-toolkit-core.
dependencies = [
    "agent-governance-toolkit-core>=4.0.0,<5.0",
    "pydantic>=2.13.4,<3.0",
]

[project.optional-dependencies]
# Integration adapters (optional — hypervisor works standalone)
nexus = [
    "structlog>=25.5.0,<26.0",
]
api = [
    "fastapi>=0.136.3,<1.0",
    "uvicorn>=0.49.0,<1.0",
]
full = [
    "agent-hypervisor[nexus]",
]
dev = [
    "pytest>=8.0.0,<10.0",
    "pytest-asyncio>=0.23.0,<2.0",
    "pytest-cov>=4.0.0,<8.0",
    "hypothesis>=6.155.1,<7.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.8.0,<3.0",
    "jsonschema>=4.26.0,<5.0",
]
blockchain = [
    "web3>=7.16.0,<8.0",  # Reserved for future blockchain anchoring — not yet used
]
observability = [
    "agent-governance-toolkit-cli>=4.0.0,<5.0",  # PrometheusExporter bridge for RingMetricsCollector
]
otel = [
    "opentelemetry-api>=1.20,<2.0",  # OTel span creation for SagaSpanExporter
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://github.com/microsoft/agent-governance-toolkit#readme"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"
"Agent OS" = "https://github.com/microsoft/agent-governance-toolkit"
"Agent Mesh" = "https://github.com/microsoft/agent-governance-toolkit"
"Agent SRE" = "https://github.com/microsoft/agent-governance-toolkit"

[project.scripts]
hypervisor = "hypervisor.cli.session_commands:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hypervisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: long-running tests (skip with -m 'not slow')",
    "integration: end-to-end integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B904",   # raise-without-from-inside-except
    "B017",   # assert-raises-exception
    "UP042",  # str+Enum → StrEnum (needs py311+)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["src/hypervisor"]
branch = true
