[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh_primitives"
version = "5.0.0"
description = "Deprecated — use agent-governance-toolkit-core instead. Shared primitive data models for Agent OS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com" }
]
keywords = [
    "agent",
    "ai",
    "llm",
    "primitives",
    "models",
    "failures",
    "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "agent-governance-toolkit-core>=4.1.0,<6.0",
    "pydantic>=2.13.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10.0",
    "mypy>=2.3.0,<3.0",
    "ruff>=0.15.21,<1.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Repository = "https://github.com/microsoft/agent-governance-toolkit.git"
Issues = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.setuptools]
packages = ["agent_primitives"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
