[build-system]
requires = ["setuptools>=78.1.1,<83.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rag-governance"
version = "4.1.0"
description = "Retrieval access control and vector store policy enforcement for RAG pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "agentgovtoolkit@microsoft.com"},
]
maintainers = [
    {name = "Agent Governance Toolkit Team", email = "agentgovtoolkit@microsoft.com"},
]
keywords = [
    "ai-agents", "governance", "rag", "retrieval-augmented-generation",
    "access-control", "audit", "policy-enforcement", "vector-store",
    "langchain", "llamaindex", "enterprise-ai", "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.4.0,<3.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff>=0.4.0",
]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[project.urls]
Homepage = "https://github.com/microsoft/agent-governance-toolkit"
Documentation = "https://github.com/microsoft/agent-governance-toolkit/tree/main/agent-governance-python/agent-rag-governance"
Repository = "https://github.com/microsoft/agent-governance-toolkit"
"Bug Tracker" = "https://github.com/microsoft/agent-governance-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
